Update API spec to better naming and to follow REST conventions
